package OCP;

// insasi actiunea de a pune pizza in cutii
// cu ajutorul ei extindem functionalitatea clasei abstracte boxing
public class Box_Type {
    public void BoxType(Boxing boxing){
        boxing.Boxing();
    }
}
