package OCP_violation;

public class Family_V_Boxing {
    public void Boxing_V(){
        System.out.println("Pizza a fost pusa in cutie de tip Family si e gata spre livrare. :) ");
    }
}
