package OCP_violation;

public class Italian_V_Boxing {
    public void Boxing_V(){
        System.out.println("Pizza a fost pusa in cutie de tip Italian si e gata spre livrare. :) ");
    }
}
