package OCP_violation;

public class Large_V_Boxing {
    public void Boxing_V(){
        System.out.println("Pizza a fost pusa in cutie de tip Large si e gata spre livrare. :) ");
    }
}
