package OCP_violation;

public class Medium_V_Boxing {
    public void Boxing_V(){
        System.out.println("Pizza a fost pusa in cutie de tip Medium si e gata spre livrare. :) ");
    }
}
